# cloudfront-signed-cookies

./: .gitignore  LICENSE.txt  README.md  main.py  private_key.pem  public_key.pem  pyproject.toml  requirements.txt
certs/: private_key.pem  public_key.pem
cloudfront_signed_cookies/: __about__.py  __init__.py  __main__.py  errors.py  signer.py
cloudfront_signed_cookies/cli/: __init__.py
cloudfront_signed_cookies/cli/genkeys/: __init__.py
cloudfront_signed_cookies/cli/sign/: __init__.py
tests/: test_signer.py
