[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloudfront-signed-cookies"
description = "A Python package for controlling access to content sitting behind a CloudFront distribution using signed cookies."
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Alexis Rodriguez", email = "arodriguez99@protonmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click>=8.1.3",
  "cryptography>=38.0.4"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/cloudfront-signed-cookies#readme"
Source = "https://github.com/bin3xish477/cloudfront-signed-cookies"

[tool.hatch.version]
path = "cloudfront_signed_cookies/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=cloudfront_signed_cookies --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "cloudfront_signed_cookies/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
